--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# env variables
+/.env
+/server/.env
+/client/.env
+
 # dependencies
 /node_modules
 /client/node_modules 
