--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.7.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^10.12.16",
     "js-cookie": "^3.0.5",
     "path": "^0.12.7",
     "react": "^18.2.0",
