--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/react": "^2.7.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@tanstack/react-query-devtools": "^4.29.12",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.16",
     "js-cookie": "^3.0.5",
     "path": "^0.12.7",
@@ -20,10 +22,13 @@
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.29.9",
+    "@tanstack/react-query": "^4.29.12",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "^20.2.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-query": "^1.2.9",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
